文字化けしている箇所を修正。ignoreファイルの追加

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ FantasyForest_Project/Library/*
 FantasyForest_Project/.vscode/*
 FantasyForest_Project/Logs/*
 FantasyForest_Project/UserSettings/*
+FantasyForest_Project/Temp
